# wow-antiAFKdll-1.12.1-vanilla

./: .gitignore  AfkPreventer.vcxproj  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1  dllmain.cpp  setup-portable-mingw.ps1
